--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="pika pic.png" alt="Pikachu pic"></td>
+      <td> <img src="Pika Pic.png" alt="Pikachu pic"></td>
       <td>
         <h1>Kazi Taiyeb Rahman</h1>
 
