--- a/Pika pika.html
+++ b/Pika pika.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3>Website with Pikaccchu picture</h3>
-    <img src="pika pic.png" alt="Pikachu pic">
+    <img src="images/Pika Pic.png" alt="Pikachu pic">
     <hr>
 
     <form  action="mailto:k.taiyeb08@gmail.com" method="post" enctype="text/plain">
